syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.elkd.core.server";

service ElkdClusterService {
    rpc AppendEntries (RpcAppendEntriesRequest) returns (stream RpcAppendEntriesResponse) {}
    rpc RequestVote (RpcRequestVoteRequest) returns (stream RpcRequestVoteResponse) {}
}

message RpcAppendEntriesRequest {
    uint32 term = 1;
    string leaderId = 2;
    uint32 prevLogIndex = 3;
    uint32 prevLogTerm = 4;
    repeated RpcEntry entries = 5;
    uint32 leaderCommit = 6;
}

message RpcAppendEntriesResponse {
    uint32 term = 1;
    bool success = 2;
}

message RpcStateMachineCommand {
    message RpcSetStateMachineCommand {
        string key = 1;
        string value = 2;
    }

    message RpcUnSetStateMachineCommand {
        string key = 1;
    }
}

message RpcEntry {
    string event = 1;
    repeated RpcStateMachineCommand commands = 2;
}

message RpcRequestVoteRequest {
    uint32 term = 1;
    string candidateId = 2;
    uint32 lastLogIndex = 3;
    uint32 lastLogTerm = 4;
}

message RpcRequestVoteResponse {
    uint32 term = 1;
    bool voteGranted = 2;
}
